# mcp

./: .gitignore  README.md
pdf_split/: README.md  pyproject.toml  requirements.txt
pdf_split/src/pdf_extract_mcp/: __init__.py  __main__.py
