[project]
name = "pdf-extract-mcp"
version = "1.0.0"
description = "MCP service for extracting pages from PDF files"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.0.1",
    "pypdf>=4.0.0",
]

[project.scripts]
pdf-extract-mcp = "pdf_extract_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
